# time-tracker-qt

./: .gitignore  CMakeLists.txt  README.md  TimeTracker_en_US.ts  main.cpp  screenshotgriditem.cpp  screenshotgriditem.h  screenshotgriditem.ui  timetracker.cpp  timetracker.h  timetracker.ui
